# etrobo_runner

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  README.md  package.xml  setup.cfg  setup.py
.githooks/: pre-commit
doc/: DESIGN.md
etrobo_runner/: etrobo_runner.py
scripts/: line_detector_gui.py  setup-git-hooks.sh
src/: .line_detector_node.cpp.swp  adaptive_line_tracker.cpp  adaptive_line_tracker.hpp  branch_merge_handler.cpp  branch_merge_handler.hpp  camera_calibrator.cpp  camera_calibrator.hpp  contour_tracker.cpp  contour_tracker.hpp  etrobo_line_detector.cpp  line_detector_node.cpp  line_detector_node.hpp  line_merger.cpp  line_merger.hpp  main.cpp  simple_line_selector.cpp  simple_line_selector.hpp
